# question-generation-distillation

./: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt  topic_controlled_baseline_README.md
archive/evaluations/: evaluation_all_models_complete_gemini_gemini-2.0-flash-001_questions.csv  evaluation_all_models_complete_gemini_gemini-2.5-flash_questions.csv  evaluation_all_models_complete_gemini_gemini-2.5-pro_questions.csv  evaluation_all_models_complete_ollama_llama3.1_8b_questions.csv  evaluation_all_models_complete_ollama_llama3.2_1b_questions.csv  evaluation_all_models_complete_ollama_llama3.2_3b_questions.csv  evaluation_all_models_complete_t5_finetuned_questions.csv  evaluation_all_models_final_gemini_gemini-2.0-flash-001_questions.csv  (+32 more)
config/: config.yaml  pipeline.yaml  settings.py
data/: DATASET_SUMMARY.md
data/final/: test.csv
notebooks/: 01_data_generation.ipynb  02_distillation_training.ipynb  03_evaluation.ipynb  04_knowledge_graph.ipynb  README.md  T5_Question_Generation_Training.ipynb  colab_T5_Question_Generation_Training.ipynb  zero_shot_t5_eval.ipynb
results/: BASELINE_RESULTS.md  COMPREHENSIVE_FINAL_RESULTS.md  CORRECTED_COMPARISON.md  FINAL_RESULTS_ANALYSIS.md  TRAINING_COMPARISON.md  baseline_comparison.csv
scripts/: __init__.py  build_knowledge_graph.py  create_training_dataset.py  evaluate_student.py  generate_questions.py  generate_training_data.py  train_student.py  wikify_questions.py  wikify_questions_incremental.py  wikify_texts.py  wikify_texts_incremental.py
src/: __init__.py
tests/: __init__.py
(+103 files in other folders)
